--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer type="module"></script>
     <title>LeagueCards</title>
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
 </head>
 
 <body>
