Alterações de design e estilização, começamos a codar a search bar

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <button class="searchBtn">
                 <img src="icons/search.svg" alt="search icon">
             </button>
-            <input class="searchInput" type="search" placeholder="Procurar por nome...">
+            <input id="search" class="searchInput" type="search" placeholder="Procurar por nome...">
         </form>
     </header>
     <section>
-        
+
         <div class="cardsContainer" id="divCard" data-target="">
 
         </div>
         <div class="cardPopup" id="popup">
             <div class="popupContent" id="popupContent">
-                
+
             </div>
         </div>
     </section>
