--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer type="module"></script>
-    <title>LeagueCards</title>
-    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
+    <title>Cards of Legends</title>
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Card of Legends</a></li>
+            <li><a href="index.html">Cards of Legends</a></li>
         </ul>
     </nav>
     <header>
@@ -22,23 +22,19 @@
             <button class="searchBtn">
                 <img src="icons/search.svg" alt="search icon">
             </button>
-            <input class="searchInput" type="search" placeholder="Procurar por nome...">
+            <input id="search" class="searchInput" type="search" placeholder="Procurar por nome...">
         </form>
     </header>
     <section>
-        
-        <div class="cardsContainer" id="divCard" data-target="">
 
+        <div class="cardsContainer" id="divCard">
         </div>
         <div class="cardPopup" id="popup">
             <div class="popupContent" id="popupContent">
-                
+
             </div>
         </div>
     </section>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
